# ImagingSIMS

./: .gitattributes  .gitignore  ImagingSIMS3.sln  License.txt  Logo.pub  README.md  upgrade-assistant.clef
Charting/: AxisY.xaml  AxisY.xaml.cs  Charting.csproj  SpectrumChart.xaml  SpectrumChart.xaml.cs
Common/: Common.csproj  Dialog.xaml  Dialog.xaml.cs  DialogBox.xaml  DialogBox.xaml.cs  EnumEx.cs  ExceptionWindow.xaml  ExceptionWindow.xaml.cs  ExtensionMethods.cs  FileDialogs.cs  FusionDropBox.xaml  FusionDropBox.xaml.cs  HeightMapDropBox.xaml  HeightMapDropBox.xaml.cs  Math.cs  PortabilityAnalysis.html  ProgressWindow.xaml  ProgressWindow.xaml.cs  RatioDropBox.xaml  RatioDropBox.xaml.cs  RegistrationDropBox.xaml  RegistrationDropBox.xaml.cs  RegistrySettings.cs  (+7 more)
ITKImageRegistration/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  AffineMM.cpp  AffineMM.h  AffinePt.cpp  AffinePt.h  AffineStd.cpp  AffineStd.h  CMakeCache.txt  CMakeLists.txt  CenterRigidMM.cpp  CenterRigidMM.h  CenterRigidPt.cpp  CenterRigidPt.h  CenterRigidStd.cpp  CenterRigidStd.h  CommandIterationUpdate.cpp  CommandIterationUpdate.h  DataTransform.cpp  DataTransform.h  ITKImageRegistration.sln  ITKImageRegistration.vcxproj  ITKImageRegistration.vcxproj.filters  IntensityRegistration.cpp  IntensityRegistration.h  OldIterationUpdate.txt  PointRegistration.cpp  PointRegistration.h  Registration.cpp  Registration.h  RegistrationOutput.csv  RegistrationParameters.h  SimilarityMM.cpp  SimilarityMM.h  SimilarityPt.cpp  SimilarityPt.h  SimilarityStd.cpp  SimilarityStd.h  TranslationMM.cpp  TranslationMM.h  (+9 more)
(+1648 files in other folders)
